--- a/css/agency.css
+++ b/css/agency.css
@@ -692,3 +692,9 @@ ul.social-buttons li a {
 ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
   background-color: #0282c4;
 }
+
+.pop-out:hover {
+  width: 232px;
+  height: 232px;
+  margin-bottom: -7px;
+}
